# SLAM_OCR

./: CMakeLists.txt  digit_recog.cpp  digit_recognition_model.onnx  easyocr.cpp  func.cpp  inference.h  main.cpp
